# ci_cd_demo

./: CMakeLists.txt  README.md  factorial.cpp  factorial.h  factorialTest.cpp
.github/workflows/: cmake.yml
